--- a/blog.html
+++ b/blog.html
@@ -239,8 +239,8 @@
   <!-- Hero Banner -->
   <section class="blog-hero">
     <div class="container">
-      <h1>Le Blog de Porokhane Digital</h1>
-      <p>Retrouvez nos conseils, actualités et analyses sur la transformation digitale, l’innovation et le numérique en Afrique.</p>
+      <h1>Le blog des curieux du numérique</h1>
+      <p>Découvrez nos derniers articles et conseils pour réussir votre transformation digitale.</p>
     </div>
   </section>
   <!-- Blog Grid -->
@@ -250,7 +250,7 @@
         <!-- Article 1 -->
         <div class="blog-card">
           <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1510511459019-5dda7724fd87?auto=format&fit=crop&w=600&q=80" alt="Sécurité WordPress - cadenas sur écran">
+            <img src="blo.jpg" alt="Sécurité WordPress - cadenas sur écran">
           </div>
           <div class="blog-card-content">
             <div class="blog-meta"><i class="far fa-calendar-alt"></i> 15 juin 2024 • <i class="far fa-folder"></i> Cybersécurité</div>
@@ -263,7 +263,7 @@
         <!-- Article 2 -->
         <div class="blog-card">
           <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=600&q=80" alt="Google SEO 2024 - algorithme et visibilité">
+            <img src="seo1.png" alt="Google SEO 2024 - algorithme et visibilité">
           </div>
           <div class="blog-card-content">
             <div class="blog-meta"><i class="far fa-calendar-alt"></i> 10 juin 2024 • <i class="far fa-folder"></i> SEO</div>
@@ -276,7 +276,7 @@
         <!-- Article 3 -->
         <div class="blog-card">
           <div class="blog-card-img">
-            <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=600&q=80" alt="SEO outils mots-clés - ordinateur avec graphique et loupe">
+            <img src="CLE.jpg" alt="SEO outils mots-clés - ordinateur avec graphique et loupe">
           </div>
           <div class="blog-card-content">
             <div class="blog-meta"><i class="far fa-calendar-alt"></i> 5 juin 2024 • <i class="far fa-folder"></i> SEO</div>
