--- a/index.html
+++ b/index.html
@@ -2057,7 +2057,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Le blog des curieux du numérique</h2>
-        <p style="color: blue;">Découvrez nos derniers articles et conseils pour réussir votre transformation digitale</p>
+        <p style="color: white;font-weight: 30px;">Découvrez nos derniers articles et conseils pour réussir votre transformation digitale</p>
       </div>
       <div class="blog-grid">
         <!-- Article 1 -->
@@ -2117,7 +2117,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Ils nous ont fait confiance</h2>
-        <p class="temoignage-highlight" style="color: blue;">Découvrez ce que nos clients disent de notre travail</p>
+        <p class="temoignage-highlight" style="color: white;">Découvrez ce que nos clients disent de notre travail</p>
       </div>
       <div class="carousel" id="carousel">
         <button class="carousel-arrow" id="prev" title="Témoignage précédent"><i class="fas fa-chevron-left"></i></button>
@@ -2179,7 +2179,7 @@
       <!-- Projet 3 -->
       <div class="realisation-card" style="background: #fff; border-radius: 24px; box-shadow: 0 4px 24px rgba(37,99,235,0.08); overflow: hidden; display: flex; flex-direction: column;">
         <div class="realisation-img" style="height: 200px; overflow: hidden;">
-          <img src="VOI.jpg" alt="Témoignage client Porokhane">
+          <img src="mo.png" alt="Témoignage client Porokhane">
         </div>
         <div class="realisation-info" style="padding: 2rem; flex: 1; display: flex; flex-direction: column; justify-content: space-between;">
           <h3 style="color: var(--vert); margin-bottom: 0.7rem;">Accompagnement Marketing Digital de MonTransfert</h3>
