--- a/blog.html
+++ b/blog.html
@@ -365,7 +365,7 @@
             <li><a href="marketing.html"><i class="fas fa-chevron-right"></i> Marketing Digital</a></li>
             <li><a href="accompagnement.html"><i class="fas fa-chevron-right"></i> Accompagnement PME</a></li>
             <li><a href="erp.html"><i class="fas fa-chevron-right"></i> ERP (Gestion d'entreprise)</a></li>
-            <li><a href="site.html"><i class="fas fa-chevron-right"></i> Développement Web</a></li>
+            <li><a href="site.html"><i class="fas fa-chevron-right"></i> Développement Web et Mobile</a></li>
             <li><a href="securite.html"><i class="fas fa-chevron-right"></i> Sécurité IT</a></li>
           </ul>
         </div>
@@ -385,7 +385,7 @@
           <h4>Contact</h4>
           <ul>
             <li><a href="tel:+221776125660"><i class="fas fa-phone"></i> +221 77 612 56 60</a></li>
-            <li><a href="mailto:contact@porokhane.com"><i class="fas fa-envelope"></i> contact@porokhane.com</a></li>
+            <li><a href="mailto:contact@digital-porokhane.com"><i class="fas fa-envelope"></i> contact@digital-porokhane.com</a></li>
             <li><a href="https://goo.gl/maps/xyz" target="_blank"><i class="fas fa-map-marker-alt"></i> Dakar, Ngor Extension villa 454</a></li>
           </ul>
         </div>
